--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Ryan's Blog</title>
   <link rel="stylesheet" type="text/css"
-href="styles.css"
+href="styles.css">
 </head>
 <body>
   <div id="header">
